Resolve webkit bug on firefox

--- a/ha-calculator/src/scss/custom/_slider.scss
+++ b/ha-calculator/src/scss/custom/_slider.scss
@@ -48,7 +48,7 @@ input[type=range]{
 @-moz-document url-prefix() {
 
   input[type=range]{
-  -webkit-appearance: inherit;
+  -webkit-appearance: progressbar;
   }
 }
 
